Fix send button alignment

--- a/style.css
+++ b/style.css
@@ -362,7 +362,8 @@ form textarea::placeholder{
     font-size: 15px;
 }
 form .snd-btn{
-    display: inline-block;
+    display: block;
+    margin: 0 auto;
     padding: 11px 26px;
     background: var(--main-color);
     color: var(--bg-color);
@@ -371,7 +372,7 @@ form .snd-btn{
     font-size: 15px;
     font-weight: 600;
     transition: all .50s ease;
-    width: 30%;
+    width: 40%;
 }
 form .snd-btn:hover{
     background: transparent;
